We the People Changelog

Version 2.8.2.4

Improvements:
- Better optimization at compile time (Whole Program Optimization)

Fixes:
- Fixed fog of war not appearing on some plots

Version 2.8.2.3

Improvements:
- Various performance improvements

Fixes:
- Native Advisor: clicking on a settlement icon is now a shortcut to jumping to the settlement (doesn't always work)
- Merging treasures is no longer able to create treasures containing 0 gold
- Various fixes to town guards
- Fixed freeze if AI transport can't reach any colony

Version 2.8.2.2

Improvements:
- "Jump to settlement" in native advisor now works by clicking a button rather than mouse over (no more accidental jumping/closing)

Fixes:
- Fixed severe slowdown related to exploring AI and ship loading
- Hot seat multiplayer will no longer crash during the diplomacy screen
- #394 units with invalid professions will no longer crash the game
- Happiness cooldown counter (turns since last happy event) will not longer become corrupted
- Fixed network OOS related to happiness cooldown counter
- Colopedia improvement page now always links to bonuses as intended (no more units)

Old savegames still work, but time since last happiness event in colonies will be reset to get rid of corrupted counters.
Not a major issue because it only happens while upgrading.

Version 2.8.2.1
Fixes:
- Pioneers will now calculate correct work rate on load (not stacking cache on each load)
- Units stuck in colonies with NO_PROFESSION will now be kicked out to make then reachable for the player again
- Changing from a military profession will now always remove the free promotions from that profession*

* the fix prevents new units from getting corrupted promotion cache, but units already affected in 2.8.2.0 savegames will not be fixed.

Version 2.8.2.0
WARNING: NOT SAVEGAME COMPATIBLE
Savegames from previous versions will not load

New Features:
- colony plot radius is now a map option (no need for switching DLL files)

- Improvements: